tests/fsharp/typecheck/sigs/neg116.bsl

neg116.fs(10,44,10,45): typecheck error FS0043: No overloads match for method 'op_Multiply'.

Known return type: ^a

Known type parameters: < float , Polynomial >

Available overloads:
 - static member Polynomial.( * ) : s: Complex * p: Polynomial -> Polynomial // Argument 's' doesn't match
 - static member Polynomial.( * ) : s: decimal * p: Polynomial -> Polynomial // Argument 's' doesn't match
